don't create new Objects for every number