@@ -349,19 +349,19 @@ class JSONTokener
             }
             try
             {
-                return new Integer(s);
+                return Integer.valueOf(s);
             }
             catch (Exception e)
             {
                 try
                 {
-                    return new Long(s);
+                    return Long.valueOf(s);
                 }
                 catch (Exception f)
                 {
                     try
                     {
-                        return new Double(s);
+                        return Double.valueOf(s);
                     }
                     catch (Exception g)
                     {
